@@ -21,6 +21,7 @@ Changes in 1.1:
 - Revamp PieceData management, fixes a crash (247984)
 - Add support for warning message parameter in tracker replies
 - Make sure connection setup slots are distributed fairly to avoid starvation
+- Use weak pointers in PeerConnector and Authenticate (258207)
 
 Changes in 1.0.5:
 - Update PeerID client identifications
